--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "flask-react-heroku-practice",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server-dev": "cd server && poetry shell && flask run --no-debugger",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
