--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 flask = "^2.3.3"
 python-dotenv = "^1.0.0"
+gunicorn = "^21.2.0"
+flask-cors = "^4.0.0"
 
 
 [build-system]
